--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <section>
         <h1 class="game_title">Tic Tac Toe</h1>
         <div class="game_container">
-            <div data-cell-index="0" class="cell"></div>
-            <div data-cell-index="1" class="cell"></div>
-            <div data-cell-index="2" class="cell"></div>
+            <div style="border-bottom: 1px solid black;" data-cell-index="0" class="cell"></div>
+            <div style="border: 1px solid black; border-top: none;" data-cell-index="1" class="cell"></div>
+            <div style="border-bottom: 1px solid black;" data-cell-index="2" class="cell"></div>
+           
             <div data-cell-index="3" class="cell"></div>
-            <div data-cell-index="4" class="cell"></div>
+            <div style="border-left: 1px solid black; border-right: 1px solid black;" data-cell-index="4" class="cell"></div>
             <div data-cell-index="5" class="cell"></div>
-            <div data-cell-index="6" class="cell"></div>
-            <div data-cell-index="7" class="cell"></div>
-            <div data-cell-index="8" class="cell"></div>
+            
+            <div style="border-top: 1px solid black;" data-cell-index="6" class="cell"></div>
+            <div style="border: 1px solid black; border-bottom: none;" data-cell-index="7" class="cell"></div>
+            <div style="border-top: 1px solid black;" data-cell-index="8" class="cell"></div>
         </div>
         <h3 class="game_status"></h3>
         <button class="game_restart">Restart Game</button>
